crates/pixi_build_frontend/src/snapshots/pixi_build_frontend__into_build_types__tests__conversions_v1_docs@pixi_build_python.snap
---
source: crates/pixi_build_frontend/src/into_build_types.rs
expression: project_model
---
name: rich_example
version: 0.1.0
description: ~
authors: ~
license: ~
license_file: ~
readme: ~
homepage: ~
repository: ~
documentation: ~
configuration: ~
targets:
  default_target:
    host_dependencies:
      hatchling:
        detailedVersion:
          version: "==1.26.3"
          build: ~
          build_number: ~
          file_name: ~
          channel: ~
          subdir: ~
          namespace: ~
          md5: ~
          sha256: ~
          url: ~
    build_dependencies: {}
    run_dependencies:
      rich:
        detailedVersion:
          version: ">=13.9.4,<14"
          build: ~
          build_number: ~
          file_name: ~
          channel: ~
          subdir: ~
          namespace: ~
          md5: ~
          sha256: ~
          url: ~
  targets: {}
