crates/pixi_build_frontend/src/snapshots/pixi_build_frontend__into_build_types__tests__conversions_v1_examples@boltons.snap
---
source: crates/pixi_build_frontend/src/into_build_types.rs
expression: project_model
---
name: boltons
version: 0.1.0
description: Add a short description here
authors:
  - nichmor <nmorkotilo@gmail.com>
license: ~
license_file: ~
readme: ~
homepage: ~
repository: ~
documentation: ~
configuration: ~
targets:
  default_target:
    host_dependencies:
      hatchling:
        detailedVersion:
          version: "*"
          build: ~
          build_number: ~
          file_name: ~
          channel: ~
          subdir: ~
          namespace: ~
          md5: ~
          sha256: ~
          url: ~
    build_dependencies: {}
    run_dependencies: {}
  targets: {}
